; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/extr_ijkplayer_jni.c_IjkMediaPlayer_getColorFormatName.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkplayer/android/extr_ijkplayer_jni.c_IjkMediaPlayer_getColorFormatName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* (%struct.TYPE_4__**, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__**, i32, i32)* @IjkMediaPlayer_getColorFormatName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @IjkMediaPlayer_getColorFormatName(%struct.TYPE_4__** %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.TYPE_4__** %0, %struct.TYPE_4__*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = call i8* @SDL_AMediaCodec_getColorFormatName(i32 %9)
  store i8* %10, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %22

14:                                               ; preds = %3
  %15 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %5, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32* (%struct.TYPE_4__**, i8*)*, i32* (%struct.TYPE_4__**, i8*)** %17, align 8
  %19 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %5, align 8
  %20 = load i8*, i8** %8, align 8
  %21 = call i32* %18(%struct.TYPE_4__** %19, i8* %20)
  store i32* %21, i32** %4, align 8
  br label %22

22:                                               ; preds = %14, %13
  %23 = load i32*, i32** %4, align 8
  ret i32* %23
}

declare dso_local i8* @SDL_AMediaCodec_getColorFormatName(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
